# ember

./: .clangd  .gitignore  CMakeLists.txt  README.md  editor.ini  frag.glsl  imgui.ini  main.cpp  shader.h
.cache/clangd/index/: _fixes.hpp.D73642A7DC72F333.idx  _vectorize.hpp.8DAF7FC91D0BD1B8.idx  common.hpp.4A7948D153CBB911.idx  compute_common.hpp.96F25BE7F9D71086.idx  compute_vector_relational.hpp.3DCCEC2B0FB96D33.idx  constants.hpp.9A243E149B9FC771.idx  constants.inl.33773C3E28BD11EB.idx  epsilon.hpp.6787A3F62217193E.idx  epsilon.inl.5AF49BCFDD1FADC7.idx  exponential.hpp.A17ED3C51AF51CD0.idx  func_common.inl.D5AC7CF265F3CC6D.idx  func_exponential.inl.0C079B6A73F0CB1D.idx  func_geometric.inl.80C4D41272B62286.idx  func_integer.inl.6625E2C7ECC4CD61.idx  func_matrix.inl.DEE87B4EB9F34AB9.idx  func_packing.inl.CD6410C05FF1A082.idx  func_trigonometric.inl.F64C55F3A43B08DD.idx  (+169 more)
editor/: CMakeLists.txt  Editor.cpp  Editor.h  EmberEditor.cpp  EmberEditor.h  importer.h  main.cpp
editor/Shaders/: fragment_shader.glsl  vertex_shader.glsl
editor/Shaders/grid/: grid_fragment_shader.glsl  grid_vertex_shader.glsl
editor/Shaders/skybox/: skybox_fragment_shader.glsl  skybox_vertex_shader.glsl
editor/include/Core/: FileSystem.h
editor/include/ECS/Components/: GridComponent.h  SkyboxComponent.h
editor/include/ECS/Systems/: GridSystem.h  SkyboxSystem.h
editor/include/UI/: GridRenderer.h  SceneManager.h  SkyboxRenderer.h  TextureCube.h
editor/include/UI/ImGui/Panels/: AssetLibraryPanel.h  FrameBufferPanel.h  NodePropsPanel.h  ScenePropsPanel.h
editor/include/UI/MacOS/: OpenFilePanel.h
editor/include/UI/Platform/OpenGL/: OpenGLTextureCube.h
editor/src/ECS/Systems/: GridSystem.cpp  SkyboxSystem.cpp
editor/src/UI/: GridRenderer.cpp  SceneManager.cpp  SkyboxRenderer.cpp  TextureCube.cpp
editor/src/UI/ImGui/: ImGuiLayer.cpp
editor/src/UI/ImGui/Panels/: AssetLibraryPanel.cpp  FrameBufferPanel.cpp  NodePropsPanel.cpp  ScenePropsPanel.cpp
editor/src/UI/MacOS/: OpenFilePanel.mm
editor/src/UI/Platform/OpenGL/: OpenGLTextureCube.cpp
lib/: CMakeLists.txt
(+68 files in other folders)
